@@ -1,3 +1,6 @@
+2017-09-17 Massimo Manghi <mxmanghi@apache.org>
+    * doc/xml/examples.xml: moved into final directory
+
 2017-09-15 Massimo Manghi <mxmanghi@apache.org>
     * rivet/packages/dio/dio.tcl: new version 1.1 of class Database
     new method mkdir for class Result
